# perceptron_learning

./: pyproject.toml
src/: main.py  perceptron.py
src/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/utils/: cli_utils.py  data_utils.py  perceptron_utils.py  validation_utils.py
