[tool.poetry]
name = "perceptron-learning"
version = "0.1.0"
description = ""
authors = ["miautawn <miautawn@gmail.com>"]
readme = "README.md"
packages = [{include = "perceptron_learning"}]

[tool.poetry.dependencies]
python = "^3.8"
inquirerpy = "^0.3.4"
pandas = "^1.5.0"
numpy = "^1.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
